--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["lealre <renaanvp@gmail.com>"]
 readme = "README.md"
+packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "3.12.3"
@@ -26,10 +27,6 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 79
-exclude = [
-    "src/crawl_sapo.py",
-    "src/crawl_imovirtual.py"
-]
 
 [tool.ruff.lint]
 preview = true
