--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ ipykernel = "^6.29.5"
 fastparquet = "^2024.5.0"
 pymongo = "^4.8.0"
 pydantic-settings = "^2.3.4"
+pandera = "^0.20.3"
 
 
 [tool.poetry.group.dev.dependencies]
