chore: Updated task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ preview = true
 quote-style = "single"
 
 [tool.taskipy.tasks]
-sapo = 'python src/crawl_sapo.py'
-imovirtual = 'python src/crawl_imovirtual.py'
+sapo = 'python src/crawlers/sapo_crawler.py'
+imovirtual = 'python src/crawlers/imovirtual_crawler.py'
 lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
