--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,13 @@ packages = [{include = "src"}]
 
 [tool.poetry.dependencies]
 python = "3.12.3"
-pandas = "^2.2.2"
 bs4 = "^0.0.2"
-requests = "^2.32.3"
-ipykernel = "^6.29.5"
 fastparquet = "^2024.5.0"
 pymongo = "^4.8.0"
 pydantic-settings = "^2.3.4"
-pandera = "^0.20.3"
+httpx = "^0.27.0"
+asyncio = "^3.4.3"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
