--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic-settings = "^2.3.4"
 httpx = "^0.27.0"
 asyncio = "^3.4.3"
 requests = "^2.32.3"
+boto3 = "^1.35.19"
 
 
 [tool.poetry.group.dev.dependencies]
