--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   mongodb:
@@ -7,6 +6,25 @@ services:
       - "27017:27017"
     volumes:
       - mongodb_data:/data/db
+    networks:
+      - dash-network
+  
+  dash-app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8051:8051"
+    depends_on:
+      - mongodb
+    env_file:
+      - .env 
+    networks:
+      - dash-network
 
 volumes:
   mongodb_data:
+
+networks:
+  dash-network:
+    driver: bridge
