--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,18 @@ packages = [{include = "src"}]
 
 
 [tool.poetry.dependencies]
-python = "3.12.3"
-bs4 = "^0.0.2"
-fastparquet = "^2024.5.0"
+python = "3.12.*"
 pymongo = "^4.8.0"
 pydantic-settings = "^2.3.4"
+
+
+[tool.poetry.group.ingestion.dependencies]
 httpx = "^0.27.0"
 asyncio = "^3.4.3"
 requests = "^2.32.3"
 boto3 = "^1.35.19"
+bs4 = "^0.0.2"
+fastparquet = "^2024.5.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -31,6 +34,7 @@ notebook = "^7.2.2"
 dash = "^2.18.0"
 dash-bootstrap-components = "^1.6.0"
 plotly = "^5.24.0"
+pandas = "^2.2.2"
 
 
 [build-system]
