Fix Docker Compose to populate the database during initialization.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - dash-network
   
   dash-app:
+    entrypoint: ./entrypoint.sh
     build:
       context: .
       dockerfile: Dockerfile
