--- a/.env-example
+++ b/.env-example
@@ -3,17 +3,21 @@ MONGO_PORT=27017
 MONGO_DATABASE='db'
 MONGO_TIMEOUT= 7000
 
-AWS_ACCESS_KEY_ID=''
-AWS_SECRET_ACCESS_KEY=''
-AWS_REGION=''
-AWS_BUCKET_NAME=''
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+AWS_BUCKET_NAME=
 
 USE_STORAGE_LOCAL=False
 USE_STORAGE_MONGO=False
 USE_STORAGE_AWS_S3=False
 
-LOCAL_BACKUP_PATH=''
+LOCAL_BACKUP_PATH=
 
 COLLECTION_RAW ='raw_collection'
 COLLECTION_CONSOLIDATE ='consolidated_imovirtual'
 COLLECTION_DASH ='dash'
+
+CONTAINER_NAME=
+BACKUP_PATH=
+LOCAL_BACKUP_PATH=
